syntax = "proto3";



option csharp_namespace = "net.atos.daf.ct2.featureservice";

package feature;


enum Responcecode{
  Success = 0;
  Failed = 1;
}

// The greeting service definition.
service FeatureService {  
  rpc Create (FeatureRequest) returns (FeatureResponce);
  rpc CreateFeatureSet (FetureSetRequest) returns (FeatureSetResponce);
  rpc UpdateFeatureSet (FetureSetRequest) returns (FeatureSetResponce);
  rpc DeleteFeatureSet (FetureSetRequest) returns (FeatureSetResponce);
  rpc Update (FeatureRequest) returns (FeatureResponce);  
  rpc Delete (FeatureRequest) returns (FeatureResponce);
  rpc GetFeatures (FeaturesFilterRequest) returns (FeaturesListResponce);
  rpc GetDataAttributes(DataAtributeRequest)returns(DataAttributeResponceList);
  rpc ChangeFeatureState(FeatureStateRequest)returns(FeatureStateResponce);

}
message FeatureStateRequest
{
    int32 Featureid =1;
    string FeatureState =2;
}
message FeatureStateResponce
{
    Responcecode Code=1;
    string Message = 2;  
}
message DataAtributeRequest
{
string LangaugeCode = 1;
}
 message FeatureRequest
  {
    int32 Id = 1;
    string Name= 2;
    string Key =3;
    string type= 4;
    FeatureState State=5;
    DataAttributeSetRequest DataAttribute = 6;  
    string Description =7;
    int32 Level=8;
  }

  message DataAttributeSetRequest
  {
    string Name= 1;
    string Description =2;
    bool IsExclusive=6;
    int32 data_attribute_set_id= 7;
    repeated int32 DataAttributeIDs = 8;
    int32 Created_by= 9;
  }
  message DataAttributeResponce
  {
    string Name= 1;
    string Description =2;
    int32 Id= 7;
    string Key= 9;
  }
  message DataAttributeResponceList{
    Responcecode Code=1;
  string Message = 2;  
  repeated DataAttributeResponce responce=3;
  }


   enum FeatureState
  {
    Active =0;
    Inactive = 1;
  }

   enum DataAttributeType
  {
    Exclusive =0;
    Inclusive = 1;
  }
  message FeatureResponce
  {
  Responcecode Code=1;
  string Message = 2;  
  int32 FeatureID=3;
}

 message FeatureSetResponce
  {
  Responcecode Code=1;
  string Message = 2;  
  int32 FeatureSetID = 3;
}
  
  message FeaturesFilterRequest
  {
  int32 level=1;
  int32 FeatureSetID=2;
  int32 RoleID=3;
  int32 OrganizationID=4;
  int32 FeatureID = 5;
  string LangaugeCode = 7;
  }

  message FeaturesResponce
  {
    int32 Id = 1;
    string Name= 2;
    string Key =3;
    string type= 4;
    bool Active=5;
    int32 data_attribute_set_id= 6;

  }

  message FetureSetRequest
  {
    int32 FeatureSetID = 1;
    string Name= 2;
    string Key =3;
    string Description = 10;
    string type= 4;
    bool Active=5;
    int32 data_attribute_set_id= 6;
    int32 ModifiedBy =9;
    repeated int32 Features = 7;
    int32 Created_by= 8;
  }

  

  message FeaturesListResponce
  {
    Responcecode code=1;
    string message = 2;
    repeated FeatureRequest Features = 3;
  }